# vcr-proxy

./: .gitignore  CLAUDE.md  Dockerfile  README.md  conftest.py  docker-compose.yaml  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml
docs/: getting-started.md
tests/: conftest.py  test_admin_api.py  test_admin_extended.py  test_app_extended.py  test_body_fields_ignore.py  test_cassette_storage.py  test_config.py  test_forward.py  test_forward_extended.py  test_forward_integration.py  test_integration.py  test_matching.py  test_matching_extended.py  test_models.py  test_proxy_extended.py  test_proxy_record.py  test_proxy_replay.py  test_proxy_spy.py  test_pytest_plugin.py  test_pytest_plugin_extended.py  test_recording.py  test_recording_extended.py  test_route_config.py  test_route_config_extended.py  test_storage_extended.py
vcr_proxy/: admin.py  app.py  config.py  forward.py  forward_main.py  logging.py  main.py  matching.py  models.py  proxy.py  pytest_plugin.py  recording.py  route_config.py  storage.py
