[project]
name = "vcr-proxy"
version = "1.0.0"
description = "HTTP record/replay proxy server"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pyyaml>=6.0",
    "structlog>=24.4",
    "mitmproxy>=11",
]

[project.scripts]
vcr-forward-proxy = "vcr_proxy.forward_main:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=vcr_proxy --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["vcr_proxy"]
branch = true
omit = [
    "vcr_proxy/main.py",
    "vcr_proxy/forward_main.py",
    "vcr_proxy/logging.py",
    "vcr_proxy/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[tool.ruff]
target-version = "py314"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[project.entry-points."pytest11"]
vcr-proxy = "vcr_proxy.pytest_plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
